# MyFtp

./: .gitignore  CMakeLists.txt  Job.c  Job.h  Makefile  README.md  ThreadGroup.c  Util.c  Util.h  client.py  main.c
FileManager/: CMakeLists.txt  Err.h  FileManager.c  FileManager.h  avl.c  avl.h  list.c  list.h
Main/: CMakeLists.txt  Job.c  Job.h  Main.c  ThreadGroup.c  ThreadGroup.h  Util.c  Util.h
client/: client.py
